--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -34,6 +34,9 @@
   }
   .navbar-menu{
     .navbar-end{
+      .navbar-item{
+        font-size: 20px;
+      }
       .navbar-item:hover{
         border-bottom: 2px solid blue;
       }
@@ -41,6 +44,9 @@
   }
   div.navbar-menu.is-active{
     .navbar-end{
+      .navbar-item{
+        font-size: 16px;
+      }
       .navbar-item:hover{
         border-bottom: none;
       }
@@ -62,30 +68,50 @@
     width: 90%;
     height: 70vh;
     border: 5px solid black;
+    animation: titleBox 1s 38s ease;
+    animation-fill-mode: forwards;
     .titles{
       margin-top: -20vh;
       p{
         font-family: 'Karla', sans-serif;
-        font-size: 4.6rem;
-        padding: 0 3rem;
-        animation: titleBox 1s 44s ease;
-        animation-fill-mode: forwards;
+        font-size: 74px;
+        padding: 0 48px;
         color: black;
         .name{
           color: blue;
         }
         .typing{
-          margin-left: 0.2rem;
+          margin-left: 3px;
           position: relative;
           color: blue;
         }
         .typing::after{
           content: "";
-          width: 0.08rem;
+          width: 1.3px;
           height: 70%;
-          border-left: 0.1rem solid black;
+          border-left: 1.6px solid black;
           animation: blink 0.9s infinite ease;
         }
+      }
+    }
+    .button-container{
+      padding: 0 48px;
+      .start-button{
+        font-family: 'Karla', sans-serif;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+        width: 30%;
+        height: 50px;
+        background-color: transparent;
+        border: 2px solid black;
+        cursor: pointer;
+        border-radius: 5px;
+        padding: 10px 0;
+      }
+      .start-button:hover{
+        background-color: black;
+        color: white;
       }
     }
   }
@@ -98,20 +124,34 @@
       .titles{
         margin-top: -10vh;
         p{
-          font-size: 1.5rem;
-          padding: 0 1rem;
+          font-size: 24px;
+          padding: 0 16px;
           .typing{
-            margin-left: 0.2rem;
+            margin-left: 3.2px;
             position: relative;
             color: blue;
           }
           .typing::after{
             content: "";
-            width: 0.08rem;
+            width: 1.3px;
             height: 70%;
-            border-left: 0.1rem solid black;
+            border-left: 1.6px solid black;
             animation: blink 0.9s infinite ease;
           }
+        }
+      }
+      .button-container{
+        padding: 0 16px;
+        .start-button{
+          font-family: 'Karla', sans-serif;
+          font-size: 18px;
+          font-weight: bold;
+          text-align: center;
+          width: 30%;
+          background-color: transparent;
+          border: 2px solid black;
+          cursor: pointer;
+          border-radius: 5%;
         }
       }
     }
@@ -120,13 +160,12 @@
 
 @keyframes titleBox{
   0%{
-      border: 0.5rem solid black;
+    border: 5px solid black;
   }
   100%{
-      border: 0.5rem solid transparent;
+    border: 5px solid transparent;
   }
 }
-
 
 @keyframes blink{
   0%{
@@ -136,3 +175,4 @@
     opacity: 1;
   }
 }
+
